<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dedupendnote.edu</groupId>
	<artifactId>DedupEndNote</artifactId>
	<version>0.9.7b-SNAPSHOT</version>

	<name>DedupEndNote</name>
	<description>Deduplicates EndNote export file in RIS format</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>21</java.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- 
			See https://issues.apache.org/jira/browse/TEXT-104 for bug in JaroWinklerDistance (returns the JaroWinklerSimilarity). JaroWinklerSimilarity in 1.8 is correct. 
		-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.14.0</version>
		</dependency>
		<!--
			https://github.com/tdebatty/java-string-similarity has an implentation of Ratcliff-Obershelp.
			Used in test JaroWinklerAbstracttextTest to compare it to JaroWinkler.
			This library also has a JaroWinkler implementation. This one is NOT used.
			
			FIXME: If this isn't useful for abstracts, remove this dependency
		 -->
		<dependency>
		    <groupId>info.debatty</groupId>
		    <artifactId>java-string-similarity</artifactId>
		    <version>2.0.0</version>
			<scope>test</scope>
		</dependency>
		<!-- <dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<scope>test</scope>
		</dependency> -->
		<!-- <dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>

			<version>2.20.0</version>
		</dependency> -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>tools.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-csv</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.github.java-diff-utils</groupId>
			<artifactId>java-diff-utils</artifactId>
			<version>4.15</version>
			<scope>test</scope>
		</dependency>
		<!--  
			webjars
			
			zie http://www.webjars.org/documentation
			zie: https://springframework.guru/spring-boot-web-application-part-2-using-thymeleaf/
		-->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>webjars-locator-lite</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>bootstrap</artifactId>
		    <version>5.3.8</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>jquery</artifactId>
		    <version>3.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery-ui</artifactId>
			<version>1.13.2</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars.bowergithub.blueimp</groupId>
		    <artifactId>jquery-file-upload</artifactId>
		    <version>10.31.0</version>
		</dependency>
		<dependency>
			<groupId>org.webjars.npm</groupId>
			<artifactId>sockjs-client</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>stomp-websocket</artifactId>
			<version>2.3.4</version>
		</dependency>
		<!-- END OF webjars -->

		<dependency>
			<groupId>org.jspecify</groupId>
			<artifactId>jspecify</artifactId>
			<version>1.0.0</version>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.openrewrite.maven</groupId>
		        <artifactId>rewrite-maven-plugin</artifactId>
		        <version>6.26.0</version>
				<configuration>
					<exportDatatables>true</exportDatatables>
					<activeRecipes>
						 <recipe>org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0</recipe>
					</activeRecipes>
					<exclusions>
						<exclusion>${project.basedir}/upload-dir/**</exclusion>
					</exclusions>
				</configuration>
		        <dependencies>
		          <dependency>
		            <groupId>org.openrewrite.recipe</groupId>
		            <artifactId>rewrite-spring</artifactId>
		            <version>6.21.0</version>
		          </dependency>
		        </dependencies>
		    </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<release>21</release>
					<encoding>UTF-8</encoding>
					<fork>true</fork>
					<compilerArgs>
						<arg>-XDcompilePolicy=simple</arg>
						<arg>--should-stop=ifError=FLOW</arg>
						<!--
							in https://errorprone.info/docs/installation#maven:
							If your maven-compiler-plugin uses an external executable, e.g. because <fork> is true or 
							because the maven-toolchains-plugin is enabled, 
							add the following under compilerArgs in the configuration above:
						-->
						<arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:NullAway:ERROR -XepOpt:NullAway:OnlyNullMarked -XepOpt:NullAway:JSpecifyMode=true</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.42</version>
						</path>
						<path>
							<groupId>com.google.errorprone</groupId>
							<artifactId>error_prone_core</artifactId>
							<version>2.42.0</version>
						</path>
						<path>
							<groupId>com.uber.nullaway</groupId>
							<artifactId>nullaway</artifactId>
							<version>0.12.12</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
   		</plugins>
	</build>

	<profiles>
		<profile>
			<id>unit-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<excludes>
								<exclude>**/integration/**</exclude>
							</excludes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<includes>
								<include>**/integration/**/*Test.java</include>
								<include>**/integration/**/*Tests.java</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
